--- a/scss/base/_test.scss
+++ b/scss/base/_test.scss
@@ -1,4 +1,4 @@
-/* scss file for testing */
-
-@import 'base/_variable.scss';
-@import 'base/_test.scss';
+body{background:$bg-color;}
+.main{background:$main;}
+.box1{background:$box1;}
+.box2{background:$box2;}
